# zenctl

./: .gitignore  Cargo.toml  README.md  context.md  smoke-test.sh
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  host.rs  install.rs  main.rs  output.rs  profile.rs  session.rs  shortcuts.rs  zen_macos.rs
crates/cli/src/commands/: bookmarks.rs  boosts.rs  capabilities.rs  checkpoint.rs  compact.rs  containers.rs  cookies.rs  data.rs  downloads.rs  essentials.rs  ext.rs  find.rs  folders.rs  glance.rs  history.rs  live_folders.rs  media.rs  mod.rs  mods.rs  page.rs  prefs.rs  search.rs  session.rs  sessions.rs  share.rs  shortcuts.rs  snapshot.rs  split.rs  status.rs  tabs.rs  target.rs  theme.rs  urlbar.rs  wait.rs  watch.rs  windows.rs  workspace.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
extension/: README.md  manifest-basic.json  manifest-privileged.json  package-lock.json  package.json  vitest.config.mjs
extension/api/: zenChrome.js  zenChrome.json  zenPrefs.js  zenPrefs.json
extension/src/: background.js  options.html  options.js
extension/tests/: helpers.test.js  load-experiment.js  setup.js
extension/tests/experiments/: zenChrome.test.js  zenPrefs.test.js
extension/tests/handlers/: advanced.test.js  basics.test.js  bookmarks.test.js  meta.test.js  page.test.js  tabs.test.js  ui.test.js  windows.test.js
extension/tests/mocks/: browser.js
