[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/phusit-somb/zenctl"
rust-version = "1.80"

[workspace.dependencies]
zenctl-protocol = { path = "crates/protocol" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "io-util", "io-std", "fs", "time"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
lz4_flex = "0.11"
toml = "0.8"
clap_complete = "4.5"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
