[package]
name = "zenctl-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "zenctl"
path = "src/main.rs"

[dependencies]
zenctl-protocol = { workspace = true }
serde      = { workspace = true }
clap       = { workspace = true }
tokio      = { workspace = true }
anyhow     = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
directories = { workspace = true }
lz4_flex = { workspace = true }
toml = { workspace = true }
clap_complete = { workspace = true }
base64 = "0.22"
flate2 = "1"
sha2 = "0.10"
hex = "0.4"
